--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -76,16 +76,36 @@
 
         </android.support.design.widget.TabLayout>
 
-        <com.ksballetba.ibus.ui.widget.NoScrollViewPager
-                android:id="@+id/vpRoute"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        </com.ksballetba.ibus.ui.widget.NoScrollViewPager>
-
-
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvTransitRouteLines"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <com.baidu.mapapi.map.MapView
+            android:id="@+id/mvRoute"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </com.baidu.mapapi.map.MapView>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabRouteMyLocation"
+            app:fabCustomSize="@dimen/material_component_floating_action_button_mini_size"
+            android:layout_width="@dimen/material_component_floating_action_button_mini_size"
+            android:layout_height="@dimen/material_component_floating_action_button_mini_size"
+            android:layout_gravity="bottom|start"
+            android:visibility="gone"
+            android:layout_marginStart="@dimen/material_component_floating_action_button_margin"
+            android:layout_marginBottom="@dimen/material_component_floating_action_button_margin_minibottom"
+            android:backgroundTint="@color/icons"
+            app:borderWidth="0dp"
+            android:src="@drawable/ic_my_location_grey_800_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
