--- a/app/src/main/res/layout/layout_suggest_poi_item.xml
+++ b/app/src/main/res/layout/layout_suggest_poi_item.xml
@@ -40,6 +40,7 @@
             android:ellipsize="end"/>
 
     <ImageView
+            android:id="@+id/ivPoiNavigation"
             android:layout_width="@dimen/material_layout_icon"
             android:layout_height="@dimen/material_layout_icon"
             android:src="@drawable/ic_directions_grey_800_24dp"
