--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -38,8 +38,9 @@
                             android:gravity="center_vertical"
                             android:textColor="@color/primary_text"
                             android:textColorHint="@color/secondary_text"
-                            android:text="@string/default_start"
                             android:background="@color/background_text"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -56,8 +57,9 @@
                             android:gravity="center_vertical"
                             android:textColor="@color/primary_text"
                             android:textColorHint="@color/secondary_text"
-                            android:hint="@string/input_end"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/tvStartLocation"/>
@@ -83,7 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -92,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
     </com.baidu.mapapi.map.MapView>
 
     <android.support.design.widget.FloatingActionButton
@@ -103,9 +105,42 @@
             android:layout_gravity="bottom|start"
             android:visibility="gone"
             android:layout_marginStart="@dimen/material_component_floating_action_button_margin"
-            android:layout_marginBottom="@dimen/material_component_floating_action_button_margin_minibottom"
+            android:layout_marginBottom="112dp"
             android:backgroundTint="@color/icons"
             app:borderWidth="0dp"
             android:src="@drawable/ic_my_location_grey_800_24dp"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabLineCollect"
+            app:fabCustomSize="@dimen/material_component_floating_action_button_size"
+            android:layout_width="@dimen/material_component_floating_action_button_size"
+            android:layout_height="@dimen/material_component_floating_action_button_size"
+            android:layout_marginStart="@dimen/material_component_floating_action_button_margin"
+            android:visibility="gone"
+            android:layout_marginEnd="@dimen/fab_left_right_margins"
+            app:layout_anchor="@id/cvLine"
+            app:layout_anchorGravity="top|end"
+            android:src="@drawable/ic_star_border_white_24dp"/>
+
+    <android.support.v7.widget.CardView
+            android:id="@+id/cvLine"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginLeft="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
+            android:layout_marginRight="@dimen/material_component_bottom_sheet_edge_top_bottom_margins"
+            android:visibility="gone"
+            app:cardElevation="@dimen/material_component_cards_elevation"
+            app:behavior_peekHeight="@dimen/routeline_card_height"
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvOtherRouteSteps"
+                android:layout_marginTop="@dimen/material_component_bottom_sheet_edge_left_right_margins"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v7.widget.CardView>
 
 </android.support.design.widget.CoordinatorLayout>
