--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -32,14 +32,26 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <android.support.design.widget.TabLayout
+                android:id="@+id/tabCollection"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/material_layout_search_bar_height"
+                app:tabMode="fixed"
+                app:tabIndicatorColor="@color/primary_text"
+                app:tabTextColor="@color/primary_text"
+                app:tabRippleColor="@color/background_text">
+
+        </android.support.design.widget.TabLayout>
+
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
-            android:id="@+id/rvCollections"
+    <android.support.v4.view.ViewPager
+            android:id="@+id/vpCollection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-    </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.view.ViewPager>
 
 </android.support.design.widget.CoordinatorLayout>
